[gd_scene load_steps=2 format=3 uid="uid://pxkernel1"]

[ext_resource type="Script" path="res://KernelSim.gd" id="1"]

[node name="KernelSim" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0, 0.0, 0.0, 1) # Pure black terminal background

[node name="KernelConsole" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_colors/default_color = Color(0.2, 1, 0.2, 1) # Green terminal text
theme_override_font_sizes/normal_font_size = 24
text = ""
scroll_active = true
fit_content = true
autowrap_mode = 0
selection_enabled = false
metadata/_edit_use_anchors_ = true

[node name="KernelTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = false
autostart = false

[connection signal="timeout" from="KernelTimer" to="." method="_on_KernelTimer_timeout"]
